# highkick-agent

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example-config.yaml  prediction.txt  pyproject.toml
app/: __init__.py  run.py  setup.py
app/clients/: __init__.py  aws.py  bedrock.py  s3.py
app/core/: agent_job.py  crypto.py  dependencies.py  exceptions.py  settings.py  task_pool.py
app/routers/: system.py
app/routers/v1/: __init__.py  accounts.py  agent.py  auth.py
app/schemas/: account.py  agent.py  auth.py  aws.py  base.py  dashboard.py  database.py  error.py  page.py  sync.py
app/service/: executor.py
utils/: example-config.yaml
